--- a/input01.html
+++ b/input01.html
@@ -9,7 +9,7 @@
     <form>
         <input type="checkbox" name="dog" value="pome">포메라니안<br/>
         <input type="checkbox" name="dog" value="dalma">달마시안<br/>
-        <input type="checkbox" name="dog" value="bool">불독<br/>
+        <input type="checkbox" name="dog" value="bool">11111111불독<br/>
     </form>
 
     <script>
